--- a/pages/index.html
+++ b/pages/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>My Blog</title>
 </head>
 <body>
-    
+    <header>
+        <h1>My Blogsite</h1>
+    </header>
+    <nav>
+        <button>Subscribe</button>
+    </nav>
 </body>
 </html>
