Create a section for blog content

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <title>My Blog</title>
+    <title>The Blogger</title>
 </head>
 <body>
     <header>
@@ -14,5 +14,11 @@
     <nav>
         <button>Subscribe</button>
     </nav>
+    <section>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium neque reprehenderit aliquam sint aliquid facere, quas error nesciunt reiciendis non harum, quam velit corporis quo, repellendus optio. Illo, placeat hic.</h2>
+        <h6></h6>
+        <p></p>
+    </section>
+    <footer>Copyright 2021-2022. All Rights Reserved.</footer>
 </body>
 </html>
