Add blog nav buttons

--- a/pages/index.html
+++ b/pages/index.html
@@ -15,10 +15,18 @@
         <button>Subscribe</button>
     </nav>
     <section>
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium neque reprehenderit aliquam sint aliquid facere, quas error nesciunt reiciendis non harum, quam velit corporis quo, repellendus optio. Illo, placeat hic.</h2>
-        <h6></h6>
-        <p></p>
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <h5>Lorem, ipsum</h5>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, eveniet?</p>
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
+        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, ad.</p>
     </section>
+    <div>
+        <button>Older Post</button>
+        <button>Newer Post</button>
+    </div>
     <footer>Copyright 2021-2022. All Rights Reserved.</footer>
 </body>
 </html>
