Create classes and ids for all elements

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,25 +8,27 @@
     <title>The Blogger</title>
 </head>
 <body>
-    <header>
-        <h1>My Blogsite</h1>
-    </header>
-    <nav>
-        <button>Subscribe</button>
-    </nav>
-    <section>
-        <h2>Lorem ipsum dolor sit amet</h2>
-        <h5>Lorem, ipsum</h5>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, eveniet?</p>
-        <h2>Lorem ipsum dolor sit amet</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
-        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, ad.</p>
-    </section>
-    <div>
-        <button>Older Post</button>
-        <button>Newer Post</button>
+    <div class="container">
+        <header class="main-header">
+            <h1 id="main-heading">My Blogsite</h1>
+        </header>
+        <nav class="top-navbar">
+            <button id="subscribe-btn">Subscribe</button>
+        </nav>
+        <section class="blog-content">
+            <h2 class="blog-heading">Lorem ipsum dolor sit amet</h2>
+            <h5 id="blog-details">Lorem, ipsum</h5>
+            <p class="blog-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, eveniet?</p>
+            <h2 class="blog-heading">Lorem ipsum dolor sit amet</h2>
+            <p class="blog-content"></p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
+            <h2 class="blog-heading">Lorem ipsum dolor sit amet consectetur.</h2>
+            <p class="blog-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, ad.</p>
+        </section>
+        <div class="nav-btns">
+            <button id="old">Older Post</button>
+            <button id="new">Newer Post</button>
+        </div>
+        <footer class="footer">Copyright 2021-2022. All Rights Reserved.</footer>
     </div>
-    <footer>Copyright 2021-2022. All Rights Reserved.</footer>
 </body>
 </html>
