--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
             <h1 id="main-heading">My Blogsite</h1>
         </header>
         <nav class="top-navbar">
-            <button id="subscribe-btn">Subscribe</button>
+            <a href="#" id="subscribe">Subscribe</a>
         </nav>
         <section class="blog-content">
             <h2 class="blog-heading">Lorem ipsum dolor sit amet</h2>
