Add subscribe button functionality

--- a/pages/subscribe.html
+++ b/pages/subscribe.html
@@ -13,7 +13,7 @@
             <h1 id="main-heading">My Blogsite</h1>
         </header>
         <nav class="top-navbar">
-            <a href="subscribe.html" id="subscribe">Subscribe</a>
+            <a href="index.html" id="back-btn">Back to Blog</a>
         </nav>
         <section class="blog-content">
             <h2 class="blog-heading">Lorem ipsum dolor sit amet</h2>
