header css done

--- a/pages/subscribe.html
+++ b/pages/subscribe.html
@@ -16,12 +16,12 @@
             <a href="index.html" id="back-btn">Back to Blog</a>
         </nav>
         <section class="blog-content">
-            <h2 class="blog-heading">Lorem ipsum dolor sit amet</h2>
+            <h2 id="blog-heading">Lorem ipsum dolor sit amet</h2>
             <h5 id="blog-details">Lorem, ipsum</h5>
             <p class="blog-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, eveniet?</p>
-            <h2 class="blog-heading">Lorem ipsum dolor sit amet</h2>
+            <h3 class="blog-heading">Lorem ipsum dolor sit amet</h2>
             <p class="blog-content"></p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
-            <h2 class="blog-heading">Lorem ipsum dolor sit amet consectetur.</h2>
+            <h3 class="blog-heading">Lorem ipsum dolor sit amet consectetur.</h2>
             <p class="blog-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, ad.</p>
         </section>
         <div class="nav-btns">
