--- a/pages/index.html
+++ b/pages/index.html
@@ -15,13 +15,13 @@
         <nav class="top-navbar">
             <a href="subscribe.html" id="subscribe">Subscribe</a>
         </nav>
-        <section class="blog-content">
-            <h2 class="blog-heading">Lorem ipsum dolor sit amet</h2>
-            <h5 id="blog-details">Lorem, ipsum</h5>
+        <section class="blog-container">
+            <h2 id="blog-heading">Web Design</h2>
+            <h5 id="blog-details">10 October, 2022 by Rohan Asif</h5>
             <p class="blog-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, eveniet?</p>
-            <h2 class="blog-heading">Lorem ipsum dolor sit amet</h2>
+            <h3 class="blog-heading">Lorem ipsum dolor sit amet</h2>
             <p class="blog-content"></p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
-            <h2 class="blog-heading">Lorem ipsum dolor sit amet consectetur.</h2>
+            <h3 class="blog-heading">Lorem ipsum dolor sit amet consectetur.</h2>
             <p class="blog-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, ad.</p>
         </section>
         <div class="nav-btns">
