Add a subscribe form

--- a/pages/subscribe.html
+++ b/pages/subscribe.html
@@ -13,21 +13,21 @@
             <h1 id="main-heading">My Blogsite</h1>
         </header>
         <nav class="top-navbar">
-            <a href="index.html" id="back-btn">Back to Blog</a>
+            <a href="index.html" id="subscribe">Go back to blog</a>
         </nav>
-        <section class="blog-content">
-            <h2 id="blog-heading">Lorem ipsum dolor sit amet</h2>
-            <h5 id="blog-details">Lorem, ipsum</h5>
-            <p class="blog-content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, eveniet?</p>
-            <h3 class="blog-heading">Lorem ipsum dolor sit amet</h2>
-            <p class="blog-content"></p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, omnis?</p>
-            <h3 class="blog-heading">Lorem ipsum dolor sit amet consectetur.</h2>
-            <p class="blog-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, ad.</p>
-        </section>
-        <div class="nav-btns">
-            <button id="old">Older Post</button>
-            <button id="new">Newer Post</button>
-        </div>
+        <form action="" method="get" class="subscribe-form">
+            <div class="name-field">
+              <label for="name">Enter your name: </label>
+              <input type="text" name="name" id="name" required>
+            </div>
+            <div class="email-field">
+              <label for="email">Enter your email: </label>
+              <input type="email" name="email" id="email" required>
+            </div>
+            <div class="submit-btn">
+              <input type="submit" value="Subscribe!">
+            </div>
+          </form>
         <footer class="footer">Copyright 2021-2022. All Rights Reserved.</footer>
     </div>
 </body>
