--- a/pages/subscribe.html
+++ b/pages/subscribe.html
@@ -18,11 +18,11 @@
             <a href="index.html" id="subscribe">Go back to blog</a>
         </nav>
         <form action="" method="get" class="subscribe-form">
-            <div class="name-field">
+            <div class="fields">
                 <label for="name">Enter your name: </label>
                 <input type="text" name="name" id="name" required>
             </div>
-            <div class="email-field">
+            <div class="fields">
                 <label for="email">Enter your email: </label>
                 <input type="email" name="email" id="email" required>
             </div>
