cahnge subscribe properties

--- a/pages/index.html
+++ b/pages/index.html
@@ -18,9 +18,9 @@
             <a href="subscribe.html" id="subscribe">Subscribe</a>
         </nav>
         <section class="blog-container">
-            <h2 id="blog-heading">Web Design</h2>
+            <h2 id="blog-heading"><em>Web Design</em></h2>
             <h5 id="blog-details">10 October, 2022 by Rohan Asif</h5>
-            <p class="blog-description">Web design encompasses many different skills and disciplines in the production
+            <p class="blog-description"><strong>Web design</strong> encompasses many different skills and disciplines in the production
                 and maintenance of websites. The different areas of web design include web graphic design; user
                 interface design (UI design); authoring, including standardised code and proprietary software; user
                 experience design (UX design); and search engine optimization. Often many individuals will work in teams
