Move index.html outside pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 id="main-heading">My Blogsite</h1>
         </header>
         <nav class="top-navbar">
-            <a href="subscribe.html" id="subscribe">Subscribe</a>
+            <a href="/pages/subscribe.html" id="subscribe">Subscribe</a>
         </nav>
         <section class="blog-container">
             <h2 id="blog-heading"><em>Web Design</em></h2>
