--- a/pages/subscribe.html
+++ b/pages/subscribe.html
@@ -15,7 +15,7 @@
             <h1 id="main-heading">My Blogsite</h1>
         </header>
         <nav class="top-navbar">
-            <a href="index.html" id="subscribe">Go back to blog</a>
+            <a href="../index.html" id="subscribe">Go back to blog</a>
         </nav>
         <form action="" method="get" class="subscribe-form">
             <div class="fields">
