--- a/pages/1_web_design.html
+++ b/pages/1_web_design.html
@@ -15,6 +15,9 @@
             <h1 id="main-heading">My Blogsite</h1>
         </header>
         <nav class="top-navbar">
+            <a href="/index.html">Home</a>
+            <a href="/pages/1_web_design.html">Web design</a>
+            <a href="/pages/2_javascript.html">JavaScript</a>
             <a href="/pages/subscribe.html" id="subscribe">Subscribe</a>
         </nav>
         <section class="blog-container">
@@ -29,7 +32,7 @@
                 design of a website including writing markup. Web design partially overlaps web engineering in the
                 broader scope of web development. Web designers are expected to have an awareness of usability and be up
                 to date with web accessibility guidelines.</p>
-            <h3 class="blog-heading">HTML</h2>
+            <h3 class="blog-heading"><u>HTML</u></h2>
                 <p class="blog-content">The HyperText Markup Language or HTML is the standard markup language for
                     documents designed to be displayed in a web browser. It can be assisted by technologies such as
                     Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
@@ -49,7 +52,7 @@
                     standards, has encouraged the use of CSS over explicit presentational HTML since 1997. A form of
                     HTML, known as HTML5, is used to display video and audio, primarily using the 'canvas' element, in
                     collaboration with javascript.</p>
-                <h3 class="blog-heading">CSS</h2>
+                <h3 class="blog-heading"><u>CSS</u></h2>
                     <p class="blog-content">Cascading Style Sheets (CSS) is a style sheet language used for describing
                         the presentation of a document written in a markup language such as HTML or XML (including XML
                         dialects such as SVG, MathML or XHTML). CSS is a cornerstone technology of the World Wide Web,
