--- a/pages/2_javascript.html
+++ b/pages/2_javascript.html
@@ -15,6 +15,9 @@
             <h1 id="main-heading">My Blogsite</h1>
         </header>
         <nav class="top-navbar">
+            <a href="/index.html">Home</a>
+            <a href="/pages/1_web_design.html">Web design</a>
+            <a href="/pages/2_javascript.html">JavaScript</a>
             <a href="/pages/subscribe.html" id="subscribe">Subscribe</a>
         </nav>
         <section class="blog-container">
