--- a/pages/subscribe.html
+++ b/pages/subscribe.html
@@ -15,8 +15,9 @@
             <h1 id="main-heading">My Blogsite</h1>
         </header>
         <nav class="top-navbar">
-            <a href="../index.html" id="subscribe">Go back to home</a>
-            <a href="/pages/1_web_design.html" id="">Web design</a>
+            <a href="/pages/1_web_design.html">Web design</a>
+            <a href="/pages/2_javascript.html">JavaScript</a>
+            <a href="/pages/subscribe.html" id="subscribe">Subscribe</a>
         </nav>
         <form action="" method="get" class="subscribe-form">
             <div class="fields">
