--- a/pages/subscribe.html
+++ b/pages/subscribe.html
@@ -11,27 +11,30 @@
 
 <body>
     <div class="container">
-        <header class="main-header">
-            <h1 id="main-heading">My Blogsite</h1>
-        </header>
-        <nav class="top-navbar">
-            <a href="/pages/1_web_design.html">Web design</a>
-            <a href="/pages/2_javascript.html">JavaScript</a>
-            <a href="/pages/subscribe.html" id="subscribe">Subscribe</a>
-        </nav>
-        <form action="" method="get" class="subscribe-form">
-            <div class="fields">
-                <label for="name">Enter your name: </label>
-                <input type="text" name="name" id="name" required>
-            </div>
-            <div class="fields">
-                <label for="email">Enter your email: </label>
-                <input type="email" name="email" id="email" required>
-            </div>
-            <div class="submit-btn">
-                <input type="submit" value="Subscribe!">
-            </div>
+        <div id="form-div">
+            <header class="main-header">
+                <h1 id="main-heading">My Blogsite</h1>
+            </header>
+            <nav class="top-navbar">
+                <a href="/index.html">Home</a>
+                <a href="/pages/1_web_design.html">Web design</a>
+                <a href="/pages/2_javascript.html">JavaScript</a>
+                <a href="/pages/subscribe.html" id="subscribe">Subscribe</a>
+            </nav>
+            <form action="" method="get" class="subscribe-form">
+                <div class="fields">
+                    <label for="name">Enter your name: </label>
+                    <input type="text" name="name" id="name" required>
+                </div>
+                <div class="fields">
+                    <label for="email">Enter your email: </label>
+                    <input type="email" name="email" id="email" required>
+                </div>
+                <div class="submit-btn">
+                    <input type="submit" value="Subscribe!">
+                </div>
         </form>
+    </div>
         <footer class="footer">Copyright 2021-2022. All Rights Reserved.</footer>
     </div>
 </body>
