--- a/pages/1_web_design.html
+++ b/pages/1_web_design.html
@@ -23,7 +23,8 @@
         <section class="blog-container">
             <h2 id="blog-heading"><em>Web Design</em></h2>
             <h5 id="blog-details">10 October, 2022 by Rohan Asif</h5>
-            <p class="blog-description"><strong>Web design</strong> encompasses many different skills and disciplines in the production
+            <p class="blog-description"><strong>Web design</strong> encompasses many different skills and disciplines in
+                the production
                 and maintenance of websites. The different areas of web design include web graphic design; user
                 interface design (UI design); authoring, including standardised code and proprietary software; user
                 experience design (UX design); and search engine optimization. Often many individuals will work in teams
@@ -32,7 +33,12 @@
                 design of a website including writing markup. Web design partially overlaps web engineering in the
                 broader scope of web development. Web designers are expected to have an awareness of usability and be up
                 to date with web accessibility guidelines.</p>
-            <h3 class="blog-heading"><u>HTML</u></h2>
+            <div class="card">
+                <h3 class="blog-heading"><u>HTML</u></h3>
+                <figure>
+                    <img class="topic-image" src="/assets/HTML.jpg" alt="picture of HTML code">
+                    <figcaption class="captions">HTML is the standard language to write webpage code</figcaption>
+                </figure>
                 <p class="blog-content">The HyperText Markup Language or HTML is the standard markup language for
                     documents designed to be displayed in a web browser. It can be assisted by technologies such as
                     Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
@@ -52,32 +58,39 @@
                     standards, has encouraged the use of CSS over explicit presentational HTML since 1997. A form of
                     HTML, known as HTML5, is used to display video and audio, primarily using the 'canvas' element, in
                     collaboration with javascript.</p>
-                <h3 class="blog-heading"><u>CSS</u></h2>
-                    <p class="blog-content">Cascading Style Sheets (CSS) is a style sheet language used for describing
-                        the presentation of a document written in a markup language such as HTML or XML (including XML
-                        dialects such as SVG, MathML or XHTML). CSS is a cornerstone technology of the World Wide Web,
-                        alongside HTML and JavaScript.
-                        CSS is designed to enable the separation of presentation and content, including layout, colors,
-                        and fonts. This separation can improve content accessibility; provide more flexibility and
-                        control in the specification of presentation characteristics; enable multiple web pages to share
-                        formatting by specifying the relevant CSS in a separate .css file, which reduces complexity and
-                        repetition in the structural content; and enable the .css file to be cached to improve the page
-                        load speed between the pages that share the file and its formatting.
-                        Separation of formatting and content also makes it feasible to present the same markup page in
-                        different styles for different rendering methods, such as on-screen, in print, by voice (via
-                        speech-based browser or screen reader), and on Braille-based tactile devices. CSS also has rules
-                        for alternate formatting if the content is accessed on a mobile device.
-                        The name cascading comes from the specified priority scheme to determine which style rule
-                        applies if more than one rule matches a particular element. This cascading priority scheme is
-                        predictable.
-                        The CSS specifications are maintained by the World Wide Web Consortium (W3C). Internet media
-                        type (MIME type) text/css is registered for use with CSS by RFC 2318 (March 1998). The W3C
-                        operates a free CSS validation service for CSS documents.
+            </div>
+            <div class="card">
+                <h3 class="blog-heading"><u>CSS</u></h3>
+                <figure>
+                    <img class="topic-image" src="/assets/CSS.jpg" alt="person holding CSS sticker">
+                    <figcaption class="captions">CSS 3 is the standard used to style webpages</figcaption>
+                </figure>
+                <p class="blog-content">Cascading Style Sheets (CSS) is a style sheet language used for describing
+                    the presentation of a document written in a markup language such as HTML or XML (including XML
+                    dialects such as SVG, MathML or XHTML). CSS is a cornerstone technology of the World Wide Web,
+                    alongside HTML and JavaScript.
+                    CSS is designed to enable the separation of presentation and content, including layout, colors,
+                    and fonts. This separation can improve content accessibility; provide more flexibility and
+                    control in the specification of presentation characteristics; enable multiple web pages to share
+                    formatting by specifying the relevant CSS in a separate .css file, which reduces complexity and
+                    repetition in the structural content; and enable the .css file to be cached to improve the page
+                    load speed between the pages that share the file and its formatting.
+                    Separation of formatting and content also makes it feasible to present the same markup page in
+                    different styles for different rendering methods, such as on-screen, in print, by voice (via
+                    speech-based browser or screen reader), and on Braille-based tactile devices. CSS also has rules
+                    for alternate formatting if the content is accessed on a mobile device.
+                    The name cascading comes from the specified priority scheme to determine which style rule
+                    applies if more than one rule matches a particular element. This cascading priority scheme is
+                    predictable.
+                    The CSS specifications are maintained by the World Wide Web Consortium (W3C). Internet media
+                    type (MIME type) text/css is registered for use with CSS by RFC 2318 (March 1998). The W3C
+                    operates a free CSS validation service for CSS documents.
 
-                        In addition to HTML, other markup languages support the use of CSS including XHTML, plain XML,
-                        SVG, and XUL.</p>
+                    In addition to HTML, other markup languages support the use of CSS including XHTML, plain XML,
+                    SVG, and XUL.</p>
+            </div>
         </section>
-        
+
         <footer class="footer">Copyright 2021-2022. All Rights Reserved.</footer>
     </div>
 </body>
