Add cards, adjust pages

--- a/index.html
+++ b/index.html
@@ -22,10 +22,28 @@
         <section class="blog-container">
             <h2 id="blog-heading"><em>Introduction</em></h2>
             <h5 id="blog-details">10 October, 2022 by Rohan Asif</h5>
-            <p class="blog-description"><strong>Who am I? </strong>I'm a mechanical engineer by degree but a computer scientist by heart!<br>This is my blog about technology and what I love! Click the links above to go through my articles or subscribe to the right to receive more!</p>
+            <p class="blog-description"><strong>Who am I? </strong>I'm a mechanical engineer by degree but a computer
+                scientist by heart!<br>This is my blog about technology and what I love! Click the links above to go
+                through my articles or subscribe to receive more!</p>
             <blockquote>When you have a dream, you have to grab it and never let go.<br>- Carol Burnett</blockquote>
         </section>
-        
+        <div class="cards-container">
+            <div class="blog-card">
+                <a href="/pages/1_web_design.html"><img class="card-image" src="/assets/HTML.jpg" alt="HTML code"></a>
+                <div class="inner">
+                    <h4 class="card-title">Web design</b></h4>
+                </div>
+            </div>
+            <div class="blog-card">
+                <a href="/pages/2_javascript.html"><img class="card-image" src="/assets/javascript.jpg" alt="Javascript code"></a>
+                
+                <div class="inner">
+                    <h4 class="card-title"><b>Javascript</b></h4>
+                </div>
+
+            </div>
+        </div>
+
         <footer class="footer">Copyright 2021-2022. All Rights Reserved.</footer>
     </div>
 </body>
