--- a/pages/1_web_design.html
+++ b/pages/1_web_design.html
@@ -16,8 +16,6 @@
         </header>
         <nav class="top-navbar">
             <a href="/index.html">Home</a>
-            <a href="/pages/1_web_design.html">Web design</a>
-            <a href="/pages/2_javascript.html">JavaScript</a>
             <a href="/pages/subscribe.html" id="subscribe">Subscribe</a>
         </nav>
         <section class="blog-container">
@@ -90,6 +88,19 @@
                     SVG, and XUL.</p>
             </div>
         </section>
+        <div class="author-info">
+            <p><strong>Name: </strong>Rohan Asif</p>
+            <p><strong>Title: </strong>Freelancer</p>
+            <p><strong>Current Company/Job: </strong>Freelance</p>
+            <p><strong>Short Bio: </strong>Mechanical Engineer with a knack for computers and technology</p>
+            <img class="avatar" src="/assets/profile.jpg" alt="Avatar">
+        </div>
+        <div class="social">
+            <p>Share!</p>
+            <a class="social-links" href="">Twitter</a>
+            <a class="social-links" href="">Facebook</a>
+            <a class="social-links" href="">LinkedIn</a>
+        </div>
 
         <footer class="footer">Copyright 2021-2022. All Rights Reserved.</footer>
     </div>
